// Vitest Snapshot v1

exports[`Menu > Menu closableSideVue demo works fine 1`] = `
<t-menu
  collapsed="true"
  defaultvalue="2-1"
  height="550px"
  theme="light"
>
  <t-menu-item
    value="item1"
  >
     仪表盘 
  </t-menu-item>
  <t-submenu
    value="2"
  >
    <span
      slot="title"
    >
      信息区
    </span>
    <t-menu-item
      value="2-1"
    >
      菜单内容一
    </t-menu-item>
    <t-menu-item
      value="2-2"
    >
      菜单内容二
    </t-menu-item>
    <t-menu-item
      value="2-3"
    >
      菜单内容三
    </t-menu-item>
  </t-submenu>
  <t-menu-item
    value="item3"
  >
     视频区 
  </t-menu-item>
  <t-menu-item
    disabled="true"
    value="item4"
  >
     资源区 
  </t-menu-item>
</t-menu>
`;

exports[`Menu > Menu customHeaderVue demo works fine 1`] = `
<t-head-menu
  data-v-92091f28=""
  defaultvalue="item2"
  theme="dark"
>
  <t-menu-item
    data-v-92091f28=""
    value="item1"
  >
    菜单1
  </t-menu-item>
  <t-menu-item
    data-v-92091f28=""
    value="item2"
  >
    菜单2
  </t-menu-item>
  <t-menu-item
    data-v-92091f28=""
    value="item3"
  >
    菜单3
  </t-menu-item>
  <t-menu-item
    data-v-92091f28=""
    disabled="true"
    value="item4"
  >
    禁用菜单
  </t-menu-item>
</t-head-menu>
`;

exports[`Menu > Menu customSideVue demo works fine 1`] = `
<t-menu
  defaultvalue="item2"
  theme="light"
>
  <t-menu-item
    value="item1"
  >
    菜单内容
  </t-menu-item>
  <t-menu-item
    value="item2"
  >
    菜单内容
  </t-menu-item>
  <t-menu-item
    value="item3"
  >
    菜单内容
  </t-menu-item>
  <t-menu-item
    disabled="true"
    value="item4"
  >
    禁用菜单
  </t-menu-item>
</t-menu>
`;

exports[`Menu > Menu doubleVue demo works fine 1`] = `
<div
  class="box"
>
  <t-head-menu
    defaultexpanded="1"
    defaultvalue="1-1"
  >
    <t-submenu
      value="1"
    >
      <t-menu-item
        value="1-1"
      >
        子菜单1-1
      </t-menu-item>
      <t-menu-item
        value="1-2"
      >
        子菜单1-2
      </t-menu-item>
      <t-menu-item
        value="1-3"
      >
        子菜单1-3
      </t-menu-item>
    </t-submenu>
    <t-submenu
      value="2"
    >
      <t-menu-item
        value="2-1"
      >
        子菜单2-1
      </t-menu-item>
      <t-menu-item
        value="2-2"
      >
        子菜单2-2
      </t-menu-item>
      <t-menu-item
        value="2-3"
      >
        子菜单2-3
      </t-menu-item>
    </t-submenu>
  </t-head-menu>
  <t-head-menu
    defaultvalue="1-1"
    expanded="1"
    style="margin-top: 24px;"
    theme="dark"
  >
    <t-submenu
      value="1"
    >
      <t-menu-item
        value="1-1"
      >
        子菜单1-1
      </t-menu-item>
      <t-menu-item
        value="1-2"
      >
        子菜单1-2
      </t-menu-item>
      <t-menu-item
        value="1-3"
      >
        子菜单1-3
      </t-menu-item>
    </t-submenu>
    <t-submenu
      value="2"
    >
      <t-menu-item
        value="2-1"
      >
        子菜单2-1
      </t-menu-item>
      <t-menu-item
        value="2-2"
      >
        子菜单2-2
      </t-menu-item>
      <t-menu-item
        value="2-3"
      >
        子菜单2-3
      </t-menu-item>
    </t-submenu>
  </t-head-menu>
</div>
`;

exports[`Menu > Menu groupSideVue demo works fine 1`] = `
<t-menu
  defaultvalue="item2"
  height="550px"
  theme="light"
>
  <t-menu-group
    title="分组类型1"
  >
    <t-menu-item
      value="item1"
    >
       菜单内容 
    </t-menu-item>
  </t-menu-group>
  <t-menu-group
    title="分组类型2"
  >
    <t-menu-item
      value="item2"
    >
      菜单内容
    </t-menu-item>
    <t-menu-item
      value="item3"
    >
      菜单内容
    </t-menu-item>
  </t-menu-group>
  <t-menu-group
    title="分组类型3"
  >
    <t-menu-item
      value="item4"
    >
      菜单内容
    </t-menu-item>
  </t-menu-group>
</t-menu>
`;

exports[`Menu > Menu headMenuDarkVue demo works fine 1`] = `
<t-head-menu
  defaultvalue="item1"
  theme="dark"
>
  <t-menu-item
    value="item1"
  >
    已选内容
  </t-menu-item>
  <t-menu-item
    value="item2"
  >
    菜单内容一
  </t-menu-item>
  <t-menu-item
    value="item3"
  >
    菜单内容二
  </t-menu-item>
  <t-menu-item
    disabled="true"
    value="item4"
  >
    菜单内容三
  </t-menu-item>
</t-head-menu>
`;

exports[`Menu > Menu headMenuEmptyVue demo works fine 1`] = `
<t-head-menu
  defaultvalue="item2"
  theme="light"
>
  <t-menu-item
    value="item1"
  >
    菜单内容一
  </t-menu-item>
  <t-menu-item
    value="item2"
  >
    已选内容
  </t-menu-item>
  <t-menu-item
    value="item3"
  >
    菜单内容二
  </t-menu-item>
  <t-menu-item
    disabled="true"
    value="item4"
  >
    菜单内容三
  </t-menu-item>
</t-head-menu>
`;

exports[`Menu > Menu headMenuModeTileVue demo works fine 1`] = `
<t-head-menu
  defaultvalue="item2"
  theme="dark"
>
  <t-menu-item
    value="item1"
  >
    111菜单内容一
  </t-menu-item>
  <t-menu-item
    value="item2"
  >
    已选内容
  </t-menu-item>
  <t-menu-item
    value="item3"
  >
    菜单内容二
  </t-menu-item>
  <t-menu-item
    disabled="true"
    value="item4"
  >
    菜单内容三
  </t-menu-item>
</t-head-menu>
`;

exports[`Menu > Menu headMenuTileVue demo works fine 1`] = `
<t-head-menu
  theme="dark"
  value="2-1"
>
  <t-menu-item
    value="1"
  >
     菜单1 
    <t-submenu>
      <t-menu-item
        value="1-1"
      >
         子菜单1-1 
      </t-menu-item>
      <t-menu-item
        value="1-2"
      >
         子菜单1-2 
      </t-menu-item>
      <t-menu-item
        value="1-3"
      >
         子菜单1-3 
      </t-menu-item>
    </t-submenu>
  </t-menu-item>
  <t-menu-item
    value="2"
  >
     菜单2 
    <t-submenu>
      <t-menu-item
        value="2-1"
      >
         子菜单2-1 
      </t-menu-item>
      <t-menu-item
        value="2-2"
      >
         子菜单2-2 
      </t-menu-item>
      <t-menu-item
        value="2-3"
      >
         子菜单2-3 
      </t-menu-item>
    </t-submenu>
  </t-menu-item>
  <t-menu-item
    value="3"
  >
     菜单3 
    <t-submenu>
      <t-menu-item
        value="3-1"
      >
         子菜单3-1 
      </t-menu-item>
      <t-menu-item
        value="3-2"
      >
         子菜单3-2 
      </t-menu-item>
      <t-menu-item
        value="3-3"
      >
         子菜单3-3 
      </t-menu-item>
    </t-submenu>
  </t-menu-item>
  <t-menu-item
    disabled="true"
    value="4"
  >
    菜单4
  </t-menu-item>
</t-head-menu>
`;

exports[`Menu > Menu multiSideVue demo works fine 1`] = `
<div
  class="box"
>
  <t-menu
    defaultexpanded="2,3"
    defaultvalue="3-2"
    expandmutex=""
    height="550px"
    theme="light"
  >
    <t-submenu
      title="消息区"
      value="3"
    >
      <t-submenu
        title="二级菜单"
        value="3-1"
      >
        <t-menu-item
          value="3-1-1"
        >
          三级菜单内容
        </t-menu-item>
        <t-menu-item
          value="3-1-2"
        >
          三级菜单内容
        </t-menu-item>
        <t-menu-item
          value="3-1-3"
        >
          三级菜单内容
        </t-menu-item>
      </t-submenu>
      <t-submenu
        title="二级菜单"
        value="3-5"
      >
        <t-menu-item
          value="3-5-1"
        >
          三级菜单内容
        </t-menu-item>
        <t-menu-item
          value="3-5-2"
        >
          三级菜单内容
        </t-menu-item>
        <t-menu-item
          value="3-5-3"
        >
          三级菜单内容
        </t-menu-item>
      </t-submenu>
      <t-menu-item
        value="3-2"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="3-3"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="3-4"
      >
        二级菜单内容
      </t-menu-item>
    </t-submenu>
    <t-menu-item
      value="user-circle"
    >
       个人中心 
    </t-menu-item>
    <t-submenu
      disabled=""
      title="视频区"
      value="4"
    >
      <t-menu-item
        value="4-1"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="4-2"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="4-3"
      >
        二级菜单内容
      </t-menu-item>
    </t-submenu>
    <t-menu-item
      value="edit1"
    >
       资源编辑 
    </t-menu-item>
  </t-menu>
  <t-menu
    defaultvalue="2-1"
    expanded="2"
    height="550px"
    style="margin-left: 40px;"
    theme="dark"
  >
    <t-menu-item
      value="item1"
    >
       仪表盘 
    </t-menu-item>
    <t-menu-item
      value="resource"
    >
       资源列表 
    </t-menu-item>
    <t-menu-item
      value="root"
    >
       根目录 
    </t-menu-item>
    <t-submenu
      title="调度平台"
      value="2"
    >
      <t-menu-item
        value="2-1"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="2-2"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="2-3"
      >
        二级菜单内容
      </t-menu-item>
    </t-submenu>
    <t-menu-item
      value="precise-monitor"
    >
       精准监控 
    </t-menu-item>
    <t-submenu
      disabled=""
      title="消息区"
      value="3"
    >
      <t-menu-item
        value="3-1"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="3-2"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="3-3"
      >
        二级菜单内容
      </t-menu-item>
    </t-submenu>
    <t-menu-item
      value="user-circle"
    >
       个人中心 
    </t-menu-item>
    <t-submenu
      title="视频区"
      value="4"
    >
      <t-menu-item
        value="4-1"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="4-2"
      >
        二级菜单内容
      </t-menu-item>
      <t-menu-item
        value="4-3"
      >
        二级菜单内容
      </t-menu-item>
    </t-submenu>
    <t-menu-item
      value="edit1"
    >
       资源编辑 
    </t-menu-item>
  </t-menu>
</div>
`;

exports[`Menu > Menu multipleVue demo works fine 1`] = `
<div
  class="box"
>
  <t-head-menu
    defaultvalue="2-1"
    expandtype="popup"
  >
    <t-submenu
      value="1"
    >
      <t-submenu
        title="子菜单1-1"
        value="1-0"
      >
        <t-menu-item
          value="1-1-1"
        >
          子菜单1-1-1
        </t-menu-item>
        <t-menu-item
          value="1-1-2"
        >
          子菜单1-1-2
        </t-menu-item>
        <t-menu-item
          value="1-1-3"
        >
          子菜单1-1-3
        </t-menu-item>
      </t-submenu>
      <t-menu-item
        value="1-2"
      >
        子菜单1-2
      </t-menu-item>
      <t-menu-item
        value="1-3"
      >
        子菜单1-3
      </t-menu-item>
      <t-menu-item
        value="1-4"
      >
        子菜单1-4
      </t-menu-item>
      <t-submenu
        title="子菜单1-5"
        value="1-5"
      >
        <t-menu-item
          value="1-5-1"
        >
          子菜单1-5-1
        </t-menu-item>
        <t-menu-item
          value="1-5-2"
        >
          子菜单1-5-2
        </t-menu-item>
        <t-menu-item
          value="1-5-3"
        >
          子菜单1-5-3
        </t-menu-item>
      </t-submenu>
    </t-submenu>
    <t-submenu
      title="菜单2"
      value="2"
    >
      <t-menu-item
        value="2-1"
      >
        子菜单2-1
      </t-menu-item>
      <t-menu-item
        value="2-2"
      >
        子菜单2-2
      </t-menu-item>
      <t-menu-item
        value="2-3"
      >
        子菜单2-3
      </t-menu-item>
    </t-submenu>
  </t-head-menu>
  <t-head-menu
    defaultvalue="2-1"
    expandtype="popup"
    style="margin-top: 24px;"
    theme="dark"
  >
    <t-submenu
      value="1"
    >
      <t-menu-item
        value="1-1"
      >
        子菜单1-1
      </t-menu-item>
      <t-menu-item
        value="1-2"
      >
        子菜单1-2
      </t-menu-item>
      <t-menu-item
        value="1-3"
      >
        子菜单1-3
      </t-menu-item>
    </t-submenu>
    <t-submenu
      value="2"
    >
      <t-menu-item
        value="2-1"
      >
        子菜单2-1
      </t-menu-item>
      <t-menu-item
        value="2-2"
      >
        子菜单2-2
      </t-menu-item>
      <t-menu-item
        value="2-3"
      >
        子菜单2-3
      </t-menu-item>
    </t-submenu>
  </t-head-menu>
</div>
`;

exports[`Menu > Menu popupSideVue demo works fine 1`] = `
<t-menu
  defaultvalue="2-1"
  expanded="2"
  expandmutex=""
  theme="light"
>
  <t-menu-item
    value="item1"
  >
     仪表盘 
  </t-menu-item>
  <t-submenu
    value="2"
  >
    <t-menu-item
      value="2-1"
    >
      子菜单内容一
    </t-menu-item>
    <t-menu-item
      value="2-2"
    >
      子菜单内容二
    </t-menu-item>
    <t-menu-item
      value="2-3"
    >
      子菜单内容三
    </t-menu-item>
  </t-submenu>
  <t-submenu
    value="3"
  >
    <t-menu-item
      value="3-1"
    >
      子菜单内容一
    </t-menu-item>
    <t-menu-item
      value="3-2"
    >
      子菜单内容二
    </t-menu-item>
    <t-menu-item
      value="3-3"
    >
      子菜单内容三
    </t-menu-item>
  </t-submenu>
  <t-menu-item
    disabled="true"
    value="item4"
  >
     资源列表 
  </t-menu-item>
</t-menu>
`;

exports[`Menu > Menu sideMenuWidthVue demo works fine 1`] = `
<div
  class="wrapper"
>
  <t-menu
    defaultvalue="item2"
    height="550px"
    style="margin-right: 20px;"
    width="200px"
  >
    <t-menu-item
      value="item1"
    >
      仪表盘
    </t-menu-item>
    <t-menu-item
      value="item2"
    >
      信息区
    </t-menu-item>
    <t-menu-item
      value="item3"
    >
      视频区
    </t-menu-item>
    <t-menu-item
      value="item4"
    >
      资源区
    </t-menu-item>
  </t-menu>
  <t-menu
    defaultvalue="item2"
    height="550px"
    width="300px,150"
  >
    <t-menu-item
      value="item1"
    >
       仪表盘 
    </t-menu-item>
    <t-menu-item
      value="2"
    >
       信息区 
    </t-menu-item>
    <t-menu-item
      value="item3"
    >
       视频区 
    </t-menu-item>
    <t-menu-item
      disabled="true"
      value="item4"
    >
       资源区 
    </t-menu-item>
  </t-menu>
</div>
`;

exports[`Menu > Menu singleSideVue demo works fine 1`] = `
<div
  class="box"
>
  <t-menu
    defaultvalue="item1"
    height="550px"
    style="margin-right: 40px;"
    theme="light"
  >
    <t-menu-item
      value="item1"
    >
      仪表盘
    </t-menu-item>
    <t-menu-item
      value="item2"
    >
      资源列表
    </t-menu-item>
    <t-menu-item
      value="item3"
    >
      根目录
    </t-menu-item>
    <t-menu-item
      disabled="true"
      value="item4"
    >
      调度平台
    </t-menu-item>
    <t-menu-item
      value="item5"
    >
      精准监控
    </t-menu-item>
    <t-menu-item
      value="item6"
    >
      消息区
    </t-menu-item>
    <t-menu-item
      value="item7"
    >
      个人中心
    </t-menu-item>
    <t-menu-item
      value="item8"
    >
      视频区
    </t-menu-item>
    <t-menu-item
      value="item9"
    >
      资源编辑
    </t-menu-item>
  </t-menu>
  <t-menu
    defaultvalue="dashboard"
    height="550px"
    style="margin-right: 40px;"
    theme="light"
  >
    <t-menu-item
      value="dashboard"
    >
       仪表盘 
    </t-menu-item>
    <t-menu-item
      value="resource"
    >
       资源列表 
    </t-menu-item>
    <t-menu-item
      value="root"
    >
       根目录 
    </t-menu-item>
    <t-menu-item
      value="control-platform"
    >
       调度平台 
    </t-menu-item>
    <t-menu-item
      value="precise-monitor"
    >
       精准监控 
    </t-menu-item>
    <t-menu-item
      value="mail"
    >
       消息区 
    </t-menu-item>
    <t-menu-item
      value="user-circle"
    >
       个人中心 
    </t-menu-item>
    <t-menu-item
      value="play-circle"
    >
       视频区 
    </t-menu-item>
    <t-menu-item
      value="edit1"
    >
       资源编辑 
    </t-menu-item>
  </t-menu>
  <t-menu
    defaultvalue="dashboard"
    height="550px"
    theme="dark"
  >
    <img
      alt="logo"
      slot="logo"
      src="https://www.tencent.com/img/index/menu_logo.png"
      width="136"
    />
    <t-menu-item
      value="dashboard"
    >
       仪表盘 
    </t-menu-item>
    <t-menu-item
      value="resource"
    >
       资源列表 
    </t-menu-item>
    <t-menu-item
      value="root"
    >
       根目录 
    </t-menu-item>
    <t-menu-item
      value="control-platform"
    >
       调度平台 
    </t-menu-item>
    <t-menu-item
      value="precise-monitor"
    >
       精准监控 
    </t-menu-item>
    <t-menu-item
      value="mail"
    >
       消息区 
    </t-menu-item>
    <t-menu-item
      value="user-circle"
    >
       个人中心 
    </t-menu-item>
    <t-menu-item
      value="play-circle"
    >
       视频区 
    </t-menu-item>
    <t-menu-item
      value="edit1"
    >
       资源编辑 
    </t-menu-item>
  </t-menu>
</div>
`;

exports[`Menu > Menu singleVue demo works fine 1`] = `
<div>
  <t-head-menu
    theme="light"
  >
    <t-menu-item
      value="item1"
    >
      菜单1
    </t-menu-item>
    <t-menu-item
      value="item2"
    >
      菜单2
    </t-menu-item>
    <t-menu-item
      disabled="true"
      value="item4"
    >
      禁用菜单
    </t-menu-item>
  </t-head-menu>
  <br />
  <t-head-menu
    height="120px"
    theme="dark"
  >
    <img
      alt="logo"
      slot="logo"
      src="https://www.tencent.com/img/index/menu_logo.png"
      width="136"
    />
    <t-menu-item
      value="item1"
    >
      菜单1
    </t-menu-item>
    <t-menu-item
      value="item2"
    >
      菜单2
    </t-menu-item>
    <t-menu-item
      disabled="true"
      value="item4"
    >
      禁用菜单
    </t-menu-item>
  </t-head-menu>
</div>
`;
